Parsing data structure returned from api call

--- a/partials/weather.html
+++ b/partials/weather.html
@@ -1,5 +1,23 @@
 <div ng-controller="weatherArea">
 
+  <ul>
+    <li ng-repeat="dailyweather in weatherJson.daily">
+<div class="clearfix" ng-if="$index % 3 == 0"></div>
+<div class="col-sm-4">
+            <h2>{{dailyweather.dt * 1000 | date:'MM/dd/yyyy'}}</h2>
+            Sunrise: {{dailyweather.sunrise * 1000 | date:'h:mm a'}}<br/>
+            Sunset: {{dailyweather.sunset * 1000 | date:'h:mm a'}}<br/>
+            Temp: {{dailyweather.temp.day}}
+            Feels Like: {{dailyweather.feels_like.day}}
+            <pre>{{dailyweather | json}}</pre></li>
+        </div>
+
+
+  </ul>
+
+
+<hr/>
+
 <pre>
 {{lat}}
 {{lon}}
@@ -9,5 +27,10 @@
 Current Temp: {{weatherJson.current.temp}}<br/>
 Feels Like: {{weatherJson.current.feels_like}}<br/>
 Humidity: {{weatherJson.current.humidity}}<br/>
+
+
+
+
+
 
 </div>
