--- a/partials/weather.html
+++ b/partials/weather.html
@@ -7,8 +7,11 @@
             <h2>{{dailyweather.dt * 1000 | date:'MM/dd/yyyy'}}</h2>
             Sunrise: {{dailyweather.sunrise * 1000 | date:'h:mm a'}}<br/>
             Sunset: {{dailyweather.sunset * 1000 | date:'h:mm a'}}<br/>
-            Temp: {{dailyweather.temp.day}}
-            Feels Like: {{dailyweather.feels_like.day}}
+            Temp: {{dailyweather.temp.day}}<br/>
+            Feels Like: {{dailyweather.feels_like.day}}<br/>
+            <div ng-repeat="description in dailyweather.weather">{{description.main}} - {{description.description}}</div>
+            Wind Speed: {{dailyweather.wind_speed}}<br/>
+            Wind Direction: {{getDirection(dailyweather.wind_deg)}}
             <pre>{{dailyweather | json}}</pre></li>
         </div>
 
