Added css file, removed console.logs

--- a/partials/weather.html
+++ b/partials/weather.html
@@ -5,7 +5,7 @@
   {{lon}}
   </pre>
 
-  <ul>
+  <ul class="weatherForecastList">
     <li ng-repeat="dailyweather in weatherJson.daily">
 <div class="clearfix" ng-if="$index % 3 == 0"></div>
 <div class="col-sm-4">
