Added icons for the wind speed

--- a/css/customcss.css
+++ b/css/customcss.css
@@ -1,7 +1,17 @@
 
 .weatherForecastList{
-  list-style: :none;
   margin:0;
   padding:0;
 
+}
+.weatherForecastList li{
+  list-style: none;
+  margin:0;
+  padding:0;
+  text-align:center;
+
+}
+
+.weatherForecastList .mainWeatherIcon{
+  margin-bottom:15px;
 }
