Adding hourly weather

--- a/partials/home.html
+++ b/partials/home.html
@@ -3,5 +3,14 @@
 <p> Duis semper dictum felis at scelerisque. Fusce eu nunc iaculis,   fermentum ipsum sed, iaculis ligula. Class aptent taciti sociosqu ad   litora torquent per conubia nostra, per inceptos himenaeos. Duis   ullamcorper dolor id blandit aliquet. Integer sed dictum nibh. Nunc eu   massa mi. Curabitur auctor pharetra metus, vitae elementum ipsum   tristique ac. Fusce vitae sapien sed arcu viverra volutpat. </p>
 <p> Curabitur sed urna urna. Cras non pulvinar velit. Mauris ultrices ante   et bibendum sagittis. Nulla facilisi. Aliquam suscipit, orci nec pretium   semper, arcu arcu fermentum felis, dignissim dapibus dui ante id nisl.   Maecenas ut pharetra erat. Curabitur volutpat velit id enim venenatis   auctor. Duis sit amet velit vitae felis dapibus venenatis a eu odio.   Donec congue eros vel aliquet accumsan. Nullam maximus lectus vel urna   malesuada sodales. Sed gravida tristique eros quis iaculis. Pellentesque   in eros convallis, lobortis dolor vel, sagittis elit. Donec eleifend   velit massa, quis iaculis enim dapibus nec. </p>
 </div>
-<div class="col-md-3"><div ng-include="'partials/form.html'"></div></div>
+<div class="col-md-2">
+
+  <div class="row" ng-include="'partials/form.html'"></div>
+
+<div class="row" ng-include="'partials/hourlyWeather.html'"></div>
+
+
+
+
+</div>
 </div>
