--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -14,8 +14,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#!/weather">7 Day Forecast</a></li>
+        <li ng-class="{'active': $route.current.loadedTemplateUrl == 'partials/home.html'}"><a href="#">Home</a></li>
+        <li ng-class="{'active': $route.current.loadedTemplateUrl == 'partials/weather.html'}"><a href="#!/weather">7 Day Forecast</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
