--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -2,17 +2,16 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Demo Ui</a>
+      <a class="navbar-brand" href="#">Brand</a>
     </div>
-
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse">
+    <div class="collapse navbar-collapse" id="navbar1">
       <ul class="nav navbar-nav">
         <li ng-class="{'active': $route.current.loadedTemplateUrl == 'partials/home.html'}"><a href="#">Home</a></li>
         <li ng-class="{'active': $route.current.loadedTemplateUrl == 'partials/weather.html'}"><a href="#!/weather">7 Day Forecast</a></li>
